--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
           <scope>provided</scope>
       </dependency>
 
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>8.0.33</version> <!-- Use the latest version available -->
+      </dependency>
+
   </dependencies>
     <build>
         <plugins>
